--- a/portfolio.html
+++ b/portfolio.html
@@ -186,7 +186,7 @@
                     <div class="project item mdl-cell mdl-cell--6-col mdl-cell--5-col-tablet mdl-cell--6-col-phone">
                         <picture picturefill class="project thumbnail">
                             <video class="back-video" autoplay muted loop>
-                                <source src="../images/20160525_01.mp4" type="video/mp4">
+                                <source src="https://lian.updog.co/images/20160525_01.mp4" type="video/mp4">
                                 <source src="movie.ogg" type="video/ogg"> Your browser does not support the video tag.
                             </video>
                         </picture>
